src/test/deca/context/invalid/created/decl_class/double_met.deca
// Description :
//    met declarée deux fois
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(2.6) La méthode meth est déjà définie

class A{
void meth(){}
int meth(){}
}